tests/machine/x/fs/substring_builtin.fs
open System

printfn "%A" (substring "mochi" 1 4)
